trabjando los iconos

--- a/views/loggin.html
+++ b/views/loggin.html
@@ -27,7 +27,7 @@ rel="stylesheet" />
         
     <form method="post" action=" /contacto"> 
                    
-            <h2>Inicie sesiòn</h2>   
+            <h2>Iniciar sesión</h2>   
             <div class="form-body">
             <i class= "fas fa-user"></i>
             <input class="controls" type="text" placeholder="Usuario">
@@ -47,7 +47,7 @@ rel="stylesheet" />
             
     
     <div class="login"> <br>
-        <h2>Ingrese con red social</h2> <br>
+        <h2>Ingresar con red social</h2> <br>
     </div>  
         <div class="login-items">
           <a href="#"class="fb"><i class="fab fa-facebook"></i></a>
