--- a/public/css/styleloggin.css
+++ b/public/css/styleloggin.css
@@ -117,15 +117,14 @@ h2{
   border-bottom-right-radius: 10px;
   outline: none;
   font-family: "Montserrat", Sans-serif;
-  
+  text-align:center;
   }
   .form-body i{
     flex:1;
     text-align: center;
     font-size: 20px;
     position:absolute;
-    right: 58%;
-    
+    right: 55%;
   }
   .form-body input [type= "text"]{
     margin-top: 50px;
@@ -181,12 +180,9 @@ color:#444;
 border: 2px solid #f7d6eb;
 border-radius: 50px;
 margin: 0  5px;
-
-
-
   }
 
-
+/*FOOTER*/
 
 
 footer{
@@ -254,9 +250,6 @@ a:hover{
     cursor: pointer;
     text-decoration: underline gray
 }
-
-
-
 
 
 @media(min-width: 576px){
