--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -1,19 +1,32 @@
 #tabla{
-    width: 100%;
+    width: 80%;
+    margin: auto;
     margin-top: 100px;
     margin-block-end: 10px;
     background-color: #f7d6eb;
-    border: solid 1px black;
 }
 
-#tabla>tr> th{
-background-color: #e2725b84 ;
+#tabla>tbody>tr> th{
+border: solid 1px white;
+font-weight: normal;
+}
+
+#tablacabecera{
+padding: 5px;
+height: 70px;
+background-color:  #e2725b84 ;
 }
 
 #buttons-container{
     display: flex;
     justify-content: center;
     margin-top: 20px;
+ 
+}
+
+#buttons-container> button:hover{
+    background:  antiquewhite;
+    border-radius: 5px;
 }
 
 #buttons-container > button{
@@ -22,13 +35,16 @@ background-color: #e2725b84 ;
     background-color: #f7d6eb;
     border: 0px;
     padding: 5px;
+    border-radius: 10px;
 }
 
 #refresh-cart{
     background-color: #e2725b84;
+    margin: auto;
     margin-top: 15px;
     padding: 5px;
     border-radius: 5px;
+    width: 80%;
 
 }
 
@@ -36,11 +52,11 @@ background-color: #e2725b84 ;
 .total-cart{
     text-align:center;
     width: 50vw;
+    height: 500px;
     margin: auto;
     margin-top: 80px;
     margin-block-end: 80px;
-    height: 500px;
-    border: solid 1px black;
+
 
 }
 
@@ -48,7 +64,7 @@ background-color: #e2725b84 ;
     background-color:#e2725b84;
     padding: 15px;
     border-radius: 5px;
-    margin:0px auto;
+    margin: 1px;
     display: flex;
     justify-content: center;
 
@@ -90,14 +106,24 @@ justify-content: space-around;
     justify-content: space-around;
     background-color: #f7d6eb;
     height: 100px;
+    margin: 2px;
 }
 
 #regalo>div> button{
     background-color: #e2725b77;
-    border-radius: 10px;
-    border: solid 1px black;
+    border-radius: 5px;
+    border: solid 0px rgba(0, 0, 0, 0.549);
+    padding: 5px;
+    margin: 10px;
+    transition: .3s ease all;
 
 }
+
+#regalo>div> button:hover{
+ background:  antiquewhite;
+
+}
+
 
 #precios-envio >tbody> tr> td{
 width: 50%;
@@ -109,3 +135,24 @@ background-color: #f7d6eb;
 
 }
 
+.padding{
+    padding: 20px;
+}
+
+input[type=number]{
+    text-align: center;
+}
+
+table{
+    border: none;
+}
+
+/*MOBILE*/ 
+@media (max-width: 361px) {
+
+}
+
+
+/*TABLET*/
+@media (max-width: 769px) {
+}
