--- a/views/home.html
+++ b/views/home.html
@@ -59,16 +59,22 @@
     </header>
 
     <main>
-        <div class="CARRUSEL">
-            <img width="400px" height="300px" src="./imagenes/cubrecama.jpeg" alt="imagenes">
+        <div class="imagen-principal-main">
+                <img class="imagen-main" src="./imagenes/IMAGEN-PORTADA.jpg" />
         </div>
         <div class="p_destacados">
-            <p> Productos Destacados</p>
+            <div class="linea">
+                ------------------------
+            </div>
+            <p> PRODUCTOS DESTACADOS  </p>
+            <div class="linea">
+                ------------------------
+            </div>
         </div>
         <div class="img_destacados">
             <div class="productos">
                 <img width="170px" height="200px" src="./imagenes/lampara1.jpg" alt="imagen producto1 ">
-                <div class="info">                
+                <div class="info">
                     <p class="descripcion"> Lampara Atenas </p>
                     <p class="precio">$5.000 </p>
                     <div class="container-button">
@@ -79,7 +85,7 @@
             </div>
             <div class="productos">
                 <img width="170px" height="200px" src="./imagenes/llavero.jpeg" alt="imagen producto2">
-                <div class="info">                   
+                <div class="info">
                     <p class="descripcion"> Llavero Cloe </p>
                     <p class="precio">$2.500 </p>
                     <div class="container-button">
@@ -91,7 +97,7 @@
                 <img width="170px" height="200px" src="./imagenes/bandeja.jpeg" alt="imagen producto3">
                 <div class="info">
                     <p class="descripcion"> Bandeja iris </p>
-                    <p class="precio">$1.800 </p>                   
+                    <p class="precio">$1.800 </p>
                     <div class="container-button">
                         <button class="button-carrito-home"><span>Ver producto</span></button>
                     </div>
@@ -101,7 +107,7 @@
                 <img width="170px" height="200px" src="./imagenes/cubrecama.jpeg" alt="imagen producto 4">
                 <div class="info">
                     <p class="descripcion"> Manta pompeya </p>
-                    <p class="precio">$20.000 </p>                 
+                    <p class="precio">$20.000 </p>
                     <div class="container-button">
                         <button class="button-carrito-home"><span>Ver producto</span></button>
                     </div>
@@ -112,14 +118,16 @@
                 <img width="170px" height="200px" src="./imagenes/recibidor.jpeg" alt="imagen producto 4">
                 <div class="info">
                     <p class="descripcion"> Recibidor dallas </p>
-                    <p class="precio">$20.000 </p>                
-                    <a> <div class="container-button">
-                        <button class="button-carrito-home"><span>Ver producto</span></button>
-                     </div> </a>
-                    
+                    <p class="precio">$20.000 </p>
+                    <a>
+                        <div class="container-button">
+                            <button class="button-carrito-home"><span>Ver producto</span></button>
+                        </div>
+                    </a>
+
                 </div>
             </div>
-          
+
     </main>
 
     <footer class="pie">
