--- a/public/css/styleloggin.css
+++ b/public/css/styleloggin.css
@@ -100,7 +100,7 @@ body{
 }
 h2{
   text-align: center;
-  font-size: 1.rem;
+  font-size: 90%;
   font-weight: 50;
   margin-bottom: 25px;
   
@@ -124,13 +124,14 @@ h2{
     text-align: center;
     font-size: 20px;
     position:absolute;
-    right: 55%;
+    right: 53%;
+    padding: 9px;
   }
   .form-body input [type= "text"]{
     margin-top: 50px;
   }
    ::placeholder{
-    font-size: 1rem;
+    font-size: 80%;
     
    }
    .form-body input:hover{
@@ -151,12 +152,7 @@ h2{
     transition:all .5s ease;
     
    }
-   form a {
-    justify-content: right;
-    
-  }
-
-   .form-body button:hover{
+      .form-body button:hover{
     color:#f7d6eb;
     border: 2px solid #f7d6eb;
     background: linear-gradient(#f7d6eb,#e81f9e );
@@ -165,6 +161,10 @@ h2{
   .contra{
     text-align: center;
   color:#444
+  }
+
+  .login{
+    height: 45px;
   }
   .login-items{
     display: flex;
