--- a/views/home.html
+++ b/views/home.html
@@ -19,7 +19,7 @@
             <p>3 y 6 cuotas sin interes - 10% de descuento con transferencia</p>
         </div>
         <div class="logo-img">
-            <div class="logo"> <img id="img-principal" width="100%" src="./imagenes/logo-header.jpg" alt="HOME&DECO">
+            <div class="logo"> <a href="/"><img id="img-principal" width="100%" src="./imagenes/logo-header.jpg" alt="HOME&DECO"></a>
             </div>
         </div>
 
@@ -78,7 +78,7 @@
                     <p class="descripcion"> Lampara Atenas </p>
                     <p class="precio">$5.000 </p>
                     <div class="container-button">
-                        <button class="button-carrito-home"><span>Ver producto</span></button>
+                        <a class="boton-lampara" href="/product"> <button class="button-carrito-home"><span>Ver producto</span></button> </a>
                     </div>
                 </div>
 
@@ -89,7 +89,7 @@
                     <p class="descripcion"> Llavero Cloe </p>
                     <p class="precio">$2.500 </p>
                     <div class="container-button">
-                        <button class="button-carrito-home"><span>Ver producto</span></button>
+                        <a> <button class="button-carrito-home"><span>Ver producto</span></button> </a>
                     </div>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                     <p class="descripcion"> Bandeja iris </p>
                     <p class="precio">$1.800 </p>
                     <div class="container-button">
-                        <button class="button-carrito-home"><span>Ver producto</span></button>
+                       <a> <button class="button-carrito-home"><span>Ver producto</span></button> </a> 
                     </div>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                     <p class="descripcion"> Manta pompeya </p>
                     <p class="precio">$20.000 </p>
                     <div class="container-button">
-                        <button class="button-carrito-home"><span>Ver producto</span></button>
+                        <a> <button class="button-carrito-home"><span>Ver producto</span></button> </a>
                     </div>
                 </div>
             </div>
@@ -121,10 +121,10 @@
                     <p class="precio">$20.000 </p>
                     <a>
                         <div class="container-button">
-                            <button class="button-carrito-home"><span>Ver producto</span></button>
+                          <a> <button class="button-carrito-home"><span>Ver producto</span></button></a>  
                         </div>
                     </a>
-
+ 
                 </div>
             </div>
 
