--- a/views/home.html
+++ b/views/home.html
@@ -25,7 +25,7 @@
 
         <div class="carrito_login"> <a href="/cart"><i class="fas fa-shopping-basket"></i></a> </div>
         <div class="user"> <a href="/loggin"> <i class="far fa-user-circle"></i> </a> </div>
-
+        <div class="registro-home"> <a href="/register"> <i class="far fa-address-card"></i> </a> </div>
         <!-- BARRA BUSQUEDA -->
 
         <div class="flexsearch">
