--- a/public/css/product.css
+++ b/public/css/product.css
@@ -7,23 +7,34 @@ body{
     margin: 0%;
 }
 
+.navbar{
+    display: flex;
+    padding: 10px;
+    margin-left: 5px;
+    font-size: 10px;
+}
+
 /*DETALLE DE PRODUCTO-INICIO CSS*/
 
 .container-product-detail{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .main-article{
     width: 100%;
+    margin: 5px;
+    padding:5px;
 }
-.precio{
-    font-size: 40px;
+.precio, .h1{
+    font-size: 25px;
+}
+.precio {
+    
     color: #333333;
     margin: 20px 0px 10px
 }
 h1{
-    font-size: 40px;
     margin: 20px 0px 10px
 }
 .container-cantidad{
@@ -32,11 +43,13 @@ h1{
     margin-bottom: 3px;
     border-top: 1px dashed rgba(51,51,51,0.2);
 }
+
 .flex-container-tam{
     display: flex;
+    flex-direction: column;
     margin-left: 10px;
     border-bottom: 1px dashed rgba(51,51,51,0.2);
-    
+
 }
 
 .flex-container-tam-opcion{  
@@ -49,22 +62,28 @@ h1{
     
 }
 .imagenes{ 
-    margin-left: 5%;
-    margin-right: 1%;
+    margin: 5px;
+    padding: 5px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+    
 }
 
 .img-producto-principal{
     width: 100%;
-}
+    margin: 5px;
+    padding: 5px;
 
+}
+.img-principal{
+    width: 100%;
+    border-radius: 3%;
+}
 .img-productos-secundaria{
-    width: 50%;
-    display: flex; 
-    justify-content: space-between; 
+    
+    display: none;
 }
-
 .container-cantidad input.cantidad-input{
     width: 70px;
     height: 15px;
@@ -156,7 +175,7 @@ input.codigo-input{
 
 .codigo-postal-y-button{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
  
 }
 
@@ -164,3 +183,121 @@ strong{
     color:  #EBB5D6
 }
 /*DETALLE DE PRODUCTO-FIN CSS*/
+
+/*TABLET CSS*/
+@media(min-width: 576px){
+    .container-product-detail{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .imagenes{ 
+        margin: 5px;
+        padding: 5px;
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-around;
+    }
+    
+    .img-producto-principal{
+        width: 100%;
+        margin: 5px;
+        padding: 5px;
+    
+    }
+    
+    .img-productos-secundaria{
+        margin: 5px;
+        padding: 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .flex-container-tam{
+        
+        flex-direction: row;
+    }
+    .codigo-postal-y-button{
+        
+        flex-direction: row;
+    }
+    .precio, .h1{
+    font-size: 40px;
+    }
+    .navbar{
+        
+        font-size: 15px;
+    }
+    .img-productos-secundaria img:hover{
+        transform: scale(1.2);
+    }
+
+    .img-productos-secundaria .product_img{
+        border-radius: 3%;
+        opacity: .7;
+    }
+    .img-productos-secundaria .product_img:hover{
+        opacity: 1;
+    }
+    
+}
+/*TABLET*/
+
+/*DESTOKP*/
+
+
+@media(min-width: 992px){
+    .container-product-detail{
+        display: flex;
+        flex-direction: row;
+    }
+
+    .imagenes{ 
+        margin-left: 5%;
+        margin-right: 1%;
+        justify-content: left;
+        
+        flex-wrap: wrap;
+        
+    }
+    .img-producto-principal{
+        width: 100%;
+    }
+    
+    .img-productos-secundaria{
+        width: 100%;
+        display: flex; 
+        justify-content: space-between;
+        flex-direction: row;
+
+        flex-wrap: nowrap;
+    }
+
+    .flex-container-tam{
+        flex-direction: row;
+    }
+    .codigo-postal-y-button{
+        flex-direction: row;
+    }
+    .precio, .h1{
+        font-size: 40px;
+    }
+    .navbar{
+        
+        font-size: 15px;
+    }
+
+    .img-productos-secundaria img:hover{
+        transform: scale(1.2);
+    }
+
+    .img-productos-secundaria .product_img{
+        border-radius: 5%;
+        opacity: .7;
+    }
+    .img-productos-secundaria .product_img:hover{
+        opacity: 1;
+    }
+    
+}
+/*DESTOKP*/
