--- a/views/product.html
+++ b/views/product.html
@@ -11,24 +11,23 @@
     <link rel="stylesheet" href="css\style.css">
     <link rel="stylesheet" href="css\product.css">
     
-
-    
     <title>HOME&DECO</title>
 </head>
 
 <body>
     <header class="head">
-    
+
         <div class="promociones">
             <p>3 y 6 cuotas sin interes - 10% de descuento con transferencia</p>
         </div>
         <div class="logo-img">
-            <div class="logo"> <img  id="img-principal" width="100%" src="./imagenes/logo-header.jpg" alt="HOME&DECO"> </div>
+            <div class="logo"> <a href="/"><img id="img-principal" width="100%" src="./imagenes/logo-header.jpg" alt="HOME&DECO"></a>
+            </div>
         </div>
 
-        <div class="carrito_login"> <a href="/cart"><i class="fas fa-shopping-basket"></i></a>  </div>
-        <div class="user"> <a href="/loggin"> <i class="far fa-user-circle"></i>  </a> </div>
-
+        <div class="carrito_login"> <a href="/cart"><i class="fas fa-shopping-basket"></i></a> </div>
+        <div class="user"> <a href="/loggin"> <i class="far fa-user-circle"></i> </a> </div>
+        <div class="registro-home"> <a href="/register"> <i class="far fa-address-card"></i> </a> </div>
         <!-- BARRA BUSQUEDA -->
 
         <div class="flexsearch">
@@ -41,23 +40,20 @@
             </form>
 
         </div>
-        <nav class="categorias">
-            <a href="/"> Living </a>
+        <!-- MENU BURGER -->
+        <div class="burger-menu">
+            <i class="fas fa-bars"></i>
+        </div>
+    </header>
 
-            <a href="/"> Cocina </a>
-
-            <a href="/"> Dormitorio </a>
-
-            <a href="/"> Exterior </a>
-
-            <a href="/"> Contacto </a>
-        </nav>
-<!-- MENU BURGER -->
-<div class="burger-menu">
-<i class="fas fa-bars"></i>
 </div>
-
-  
+<nav class="navbar">
+    <a href="/"> Inicio </a>
+    <span class="felcha">></span>
+    <a href="/"> Iluminacion </a>
+    <span class="felcha">></span>
+    <a href="/"> Lampara Tokio </a>
+</nav>  
 
 </header>
 
@@ -65,12 +61,15 @@
         <div class = "container-product-detail">
             <div class = "imagenes">
                 <div class = "img-producto-principal">
-                    <img class="img-principal" src="imagenes/lampara1.jpg" alt="Lampara" ></img>
+                    <img width = "100" class="img-principal" src="imagenes/lampara1.jpg" alt="Lampara" ></img>
                 </div>
                 <div class = "img-productos-secundaria">
-                    <div><img width="100" src="imagenes/lampara2.jpg" alt="Lampara" class="product_img"></img></div>
-                    <div><img width="100" src="imagenes/lampara3.jpg" alt="Lampara" class="product_img"></img></div>
-                    <div><img width="100" src="imagenes/lampara4.jpg" alt="Lampara" class="product_img"></img></div>
+                    <div><img width="100" height="100" src="imagenes/lampara2.jpg" alt="Lampara" class="product_img"></img></div>
+                    <div><img width="100" height="100" src="imagenes/lampara3.jpg" alt="Lampara" class="product_img"></img></div>
+                    <div><img width="100" height="100" src="imagenes/lampara4.jpg" alt="Lampara" class="product_img"></img></div>
+                    <div><img width="100" height="100" src="imagenes/lampara5.jpg" alt="Lampara" class="product_img"></img></div>
+                    
+                    
                 </div>
             </div>
             <div class="main-article">
@@ -96,7 +95,7 @@
                         <label for="tamanio">Tamaño</label>
                     
                         <div class = "flex-container-tam-opcion">
-                            <select  name = "tamanio">
+                            <select  class = "button-tam" name = "tamanio">
                                 <option disabled="">Seleccione una Opcion</option>
                                         <option value="ESTANDAR">ESTANDAR</option>
                                         <option value="GRANDE">GRANDE</option>
@@ -143,9 +142,15 @@
 
             <div class="info-flex">
                 <h4>INFORMACION</h4>
-                <p class="piePag"> Preguntas frecuentes </p>
-                <p class="piePag"> Cambios y devoluciones </p>
-                <p class="piePag"> Envios </p>
+                <a href="/preguntasFrecuentes">
+                    <p class="piePag"> Preguntas frecuentes </p>
+                </a>
+                <a href="/Cambios">
+                    <p class="piePag"> Cambios y devoluciones </p>
+                </a>
+                <a href="/envios">
+                    <p class="piePag"> Envios </p>
+                </a>
             </div>
 
 
@@ -153,29 +158,37 @@
 
             <div class="contacto-flex">
                 <h4>CONTACTO</h4>
-                <p class="piePag"><i class="fas fa-map-marker-alt"></i> Ubicacion </p>
-                <p class="piePag"> <i class="fab fa-whatsapp"></i> Telefono </p>
-                <p class="piePag"> <i class="far fa-envelope"></i> Email </p>
+                <a href="/info">
+                    <p class="piePag"><i class="fas fa-map-marker-alt"></i> Ubicacion </p>
+                </a>
+                <a href="/info">
+                    <p class="piePag"> <i class="fab fa-whatsapp"></i> Telefono </p>
+                </a>
+                <a href="/info">
+                    <p class="piePag"> <i class="far fa-envelope"></i> Email </p>
+                </a>
             </div>
 
 
             <div class="new-flex">
                 <h4>NEWSLETTER</h4>
-                <h6> Suscribite para recibir alertas</h6>
-                <form class="suscribite" action="/" method="get">
-                    <input type="email" name="email" placeholder="ejemplo@gmail.com">
-                    <button type="submit"> Suscribirse </button>
+                <h6 class="newsletter"> Suscribite para recibir novedades!</h6>
+                <form action="/" method="get">
+                    <input class="suscribite" type="email" name="email" placeholder="ejemplo@gmail.com">
+                    <button class="suscrib" type="submit"> Suscribirse </button>
 
                 </form>
             </div>
 
-
             <div class="redes-flex">
                 <h4>NUESTRAS REDES</h4>
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-instagram"></i>
+                <a href="http://facebook.com"> <i class="fab fa-facebook-square"></i> </a>
+                <a href="http://instagram.com"> <i class="fab fa-instagram"></i> </a>
             </div>
 
+        </div>
+        <div class="copyright">
+            <p> Copyright © 2022 Hangar - Home & Deco. </p>
         </div>
 
     </footer>
