agregando header y footer modificados

--- a/views/register.html
+++ b/views/register.html
@@ -14,16 +14,18 @@
 
 <body>
     <header class="head">
-    
-            <div class="promociones">
-                <p>3 y 6 cuotas sin interes - 10% de descuento con transferencia</p>
-            </div>
-            <div class="logo-img">
-                <div class="logo"> <img  id="img-principal" width="100%" src="./imagenes/logo-header.jpg" alt="HOME&DECO"> </div>
-            </div>
 
-            <div class="carrito_login"> <a href="/cart"><i class="fas fa-shopping-basket"></i></a>  </div>
-            <div class="user"> <a href="/loggin"> <i class="far fa-user-circle"></i>  </a> </div>
+        <div class="promociones">
+            <p>3 y 6 cuotas sin interes - 10% de descuento con transferencia</p>
+        </div>
+        <div class="logo-img">
+            <div class="logo"> <a href="/"><img id="img-principal" width="100%" src="./imagenes/logo-header.jpg" alt="HOME&DECO"></a>
+            </div>
+        </div>
+
+        <div class="carrito_login"> <a href="/cart"><i class="fas fa-shopping-basket"></i></a> </div>
+        <div class="user"> <a href="/loggin"> <i class="far fa-user-circle"></i> </a> </div>
+        <div class="registro-home"> <a href="/register"> <i class="far fa-address-card"></i> </a> </div>
     </header>
 
    <body>
@@ -40,48 +42,62 @@
     </form>
    </body>
 
-    <footer class="pie">
-        <div class="informacion">
+   <footer class="pie">
+    <div class="informacion">
 
 
-            <div class="info-flex">
-                <h4>INFORMACION</h4>
-              <a href="/preguntasFrecuentes">  <p class="piePag"> Preguntas frecuentes </p> </a> 
-               <a href="/Cambios"> <p class="piePag"> Cambios y devoluciones </p></a>  
-               <a href="/envios">  <p class="piePag"> Envios </p> </a>
-            </div>
-
-
-
-
-            <div class="contacto-flex">
-                <h4>CONTACTO</h4>
-               <a href="/info"> <p class="piePag"><i class="fas fa-map-marker-alt"></i> Ubicacion </p></a> 
-               <a href="/info"> <p class="piePag"> <i class="fab fa-whatsapp"></i> Telefono </p> </a> 
-               <a href="/info>"> <p class="piePag"> <i class="far fa-envelope"></i> Email </p></a> 
-            </div>
-
-
-            <div class="new-flex">
-                <h4>NEWSLETTER</h4>
-                <h6 class="newsletter"> Suscribite para recibir novedades!</h6>
-                <form  action="/" method="get">
-                    <input class="suscribite" type="email" name="email" placeholder="ejemplo@gmail.com">
-                    <button class="suscrib" type="submit"> Suscribirse </button>
-
-                </form>
-            </div>
-
-            <div class="redes-flex">
-                <h4>NUESTRAS REDES</h4>
-                <a href="http://facebook.com"> <i class="fab fa-facebook-square"></i> </a>
-                <a href="http://instagram.com"> <i class="fab fa-instagram"></i> </a>
-            </div>
-
+        <div class="info-flex">
+            <h4>INFORMACION</h4>
+            <a href="/preguntasFrecuentes">
+                <p class="piePag"> Preguntas frecuentes </p>
+            </a>
+            <a href="/Cambios">
+                <p class="piePag"> Cambios y devoluciones </p>
+            </a>
+            <a href="/envios">
+                <p class="piePag"> Envios </p>
+            </a>
         </div>
 
-    </footer>
 
+
+
+        <div class="contacto-flex">
+            <h4>CONTACTO</h4>
+            <a href="/info">
+                <p class="piePag"><i class="fas fa-map-marker-alt"></i> Ubicacion </p>
+            </a>
+            <a href="/info">
+                <p class="piePag"> <i class="fab fa-whatsapp"></i> Telefono </p>
+            </a>
+            <a href="/info">
+                <p class="piePag"> <i class="far fa-envelope"></i> Email </p>
+            </a>
+        </div>
+
+
+        <div class="new-flex">
+            <h4>NEWSLETTER</h4>
+            <h6 class="newsletter"> Suscribite para recibir novedades!</h6>
+            <form action="/" method="get">
+                <input class="suscribite" type="email" name="email" placeholder="ejemplo@gmail.com">
+                <button class="suscrib" type="submit"> Suscribirse </button>
+
+            </form>
+        </div>
+
+        <div class="redes-flex">
+            <h4>NUESTRAS REDES</h4>
+            <a href="http://facebook.com"> <i class="fab fa-facebook-square"></i> </a>
+            <a href="http://instagram.com"> <i class="fab fa-instagram"></i> </a>
+        </div>
+
+    </div>
+    <div class="copyright">
+        <p> Copyright © 2022 Hangar - Home & Deco. </p>
+    </div>
+
+</footer>
 </body>
 
 </html>
