--- a/public/css/register.css
+++ b/public/css/register.css
@@ -6,25 +6,33 @@ body {
 }
 /*HEADER*/
 
-.fas.fa-shopping-basket {
+.fas.fa-shopping-basket{
   position: absolute;
   left: 95%;
   top: 57px;
 }
 
-.far.fa-user-circle {
+.far.fa-user-circle{
   position: absolute;
   left: 86%;
   top: 57px;
   cursor: pointer;
 }
 
-.fas.fa-shopping-basket:hover,
-.far.fa-user-circle:hover {
+.far.fa-address-card{
+  position: absolute;
+  left: 77%;
+  top: 57px;
+  cursor: pointer;
+  font-size: 17px;
+}
+
+.fas.fa-shopping-basket:hover, .far.fa-user-circle:hover, .far.fa-address-card:hover  {
   font-size: 25px;
 }
 
-.promociones {
+
+.promociones{
   background-color: antiquewhite;
   text-align: center;
   font-family: "Montserrat", Sans-serif;
@@ -34,78 +42,108 @@ body {
   margin: 0px;
 }
 
-img {
-  max-width: 100vw;
-  text-align: center;
-}
-
-.logo-img {
+.logo-img{
   height: 100%;
   display: flex;
   justify-content: center;
 }
 
-.logo-img .logo {
+.logo-img .logo{
   width: 25%;
   height: 10%;
-}
+  }
 
-.flexsearch--form {
+
+.flexsearch--form{
   display: flex;
   justify-content: center;
+  
 }
-.flexsearch--input,
-.flexsearch--submit {
-  background-color: #fffdd0;
+.flexsearch--input, .flexsearch--submit{
+  background-color: #FFFDD0; 
   border: none;
   background: transparent;
-  border-bottom: 1px solid rgba(67, 67, 67, 0.3);
+  border-bottom: 1px solid rgba(67,67,67,0.3);
+  
 }
 
-.flexsearch--input {
+.flexsearch--input{
   width: 30vw;
 }
 
 
+
 /*FOOTER*/
-footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  background-color: #cdc1b3;
-}
-.informacion {
-  display: flex;
-  justify-content: space-between;
+footer{
+  background-color:#cdc1b3;
+  padding: 1px
 }
 
-.redes-flex,
-.new-flex,
-.contacto-flex,
-.info-flex {
-  display: flex;
+.fab.fa-facebook-square, .fa-instagram{
+  align-self: center;
+  font-size: 30px;
+  margin: 5px;
+  color: black
+}
+
+
+
+
+h4{
+  font-family: "Montserrat", Sans-serif;
+  font-size: 15px;
+  font-weight: 300;
+  text-align: center;
+  margin-inline: auto;
+  text-decoration: underline;
+}
+
+
+.informacion {
   flex-direction: column;
 }
 
-.fab.fa-facebook-square,
-.fa-instagram {
-  align-self: center;
-  font-size: 26px;
-  margin: 5px;
+.redes-flex, .new-flex, .contacto-flex, .info-flex{
+  text-align:center ;
 }
 
-h4 {
-  font-family: "Montserrat", Sans-serif;
-  font-size: 19px;
-  font-weight: 300;
-}
-
-.piePag {
+.piePag{
   font-size: 14px;
+  color: #00000085;
 }
 
-.suscribite {
-  border-radius: 15px;
+.suscribite{
+  font-size: 15px;
+  border-radius: 10px;
+}
+
+.suscrib{
+background-color: #D8AF8C;
+border-radius: 5px;
+color: white;
+cursor: pointer;
+font-size: 15px;
+margin-top: 5px;
+}
+
+.newsletter{
+  text-align: center;
+  font-family: montserrat;
+  color: #00000085;
+}
+
+a{
+  text-decoration: none;
+}
+
+a:hover{
+  cursor: pointer;
+  text-decoration: underline gray
+}
+
+
+.copyright{
+  font-size: 10px;
 }
 
 /*FORMULARIO REGISTRO*/
@@ -170,7 +208,63 @@ form #Contraseña{
     font-size: 1em;
    
 }
+@media(min-width: 576px){
 
+  .linea{
+      display: block;
+  }
+  
+      .informacion{
+          display: flex;
+          justify-content: space-around;
+          flex-direction: row;
+          height: 206px;
+      }
+      
+      .redes-flex, .new-flex, .contacto-flex, .info-flex{
+          display: flex;
+          flex-direction: column;
+          margin: 5px;
+      }
+      
+      h4{
+          text-decoration: overline;
+      }
+  
+  
+  .fab.fa-facebook-square, .fab.fa-instagram{
+      cursor: pointer;}
+  
+  .fab.fa-facebook-square:hover, .fab.fa-instagram:hover{
+      font-size: 35px;
+  }
+  
+  
+  .far.fa-user-circle{
+      left: 90%
+  }
+  
+  .far.fa-address-card{
+      left: 84%;
+  }
+  
+  .burger-menu {
+      display: none;
+  } 
+  
+  .categorias{
+      display: flex;
+      justify-content:space-evenly;
+      padding: 10px;
+      font-size: 13px;
+  }
+  
+  .productos{
+      width: 30%;
+  }
+  
+  }
+  
 @media (min-width: 769px){
     .logo-img {
         height: 100%;
@@ -184,4 +278,16 @@ form #Contraseña{
 .registro{
         height: 420px;
     }
+}
+@media(min-width: 992px){
+  .productos{
+      width: 170px;
+  }
+}
+
+
+@media(min-width: 1200px){
+#imagen5{
+  display:block;
+}
 }
