modificacion de enviar por crear

--- a/views/register.html
+++ b/views/register.html
@@ -36,7 +36,7 @@
         <label id="email">Correo electrónico: <input type="email" class="form_input" id="email" name="email" placeholder="Ej: federico@gmail.com"/></label>
         <label id="fnac">Fecha de nacimiento: <input type="date" class="form_input" id="fnac" name="fnac" /></label>
         <label id="Contraseña">Contraseña: <input type="password" class="form_input" id="Contraseña" name="Contraseña"/></label>
-        <input type="submit" class="boton_enviar" value="Enviar">
+        <input type="submit" class="boton_enviar" value="Crear">
 
 
     </form>
