--- a/public/css/styleloggin.css
+++ b/public/css/styleloggin.css
@@ -10,63 +10,72 @@ body{
 
 
 .fas.fa-shopping-basket{
-    position: absolute;
-    left: 95%;
-    top: 57px;
+  position: absolute;
+  left: 95%;
+  top: 57px;
 }
 
 .far.fa-user-circle{
-    position: absolute;
-    left: 86%;
-    top: 57px;
-    cursor: pointer;
+  position: absolute;
+  left: 86%;
+  top: 57px;
+  cursor: pointer;
 }
 
-.fas.fa-shopping-basket:hover, .far.fa-user-circle:hover{
-    font-size: 25px;
+.far.fa-address-card{
+  position: absolute;
+  left: 84%;
+  top: 57px;
+  cursor: pointer;
+  font-size: 17px;
+}
+
+.fas.fa-shopping-basket:hover, .far.fa-user-circle:hover, .far.fa-address-card:hover  {
+  font-size: 25px;
 }
 
 
 .promociones{
-    background-color: antiquewhite;
-    text-align: center;
-    font-family: "Montserrat", Sans-serif;
-    font-size: 12px;
-    font-weight: 300;
-    letter-spacing: 1.5px;
-    margin: 0px;
+  background-color: antiquewhite;
+  text-align: center;
+  font-family: "Montserrat", Sans-serif;
+  font-size: 12px;
+  font-weight: 300;
+  letter-spacing: 1.5px;
+  margin: 0px;
 }
 
 
 
 .logo-img{
-    height: 100%;
-    display: flex;
-    justify-content: center;
+  height: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .logo-img .logo{
-    width: 25%;
-    height: 10%;
-    }
+  width: 25%;
+  height: 10%;
+  }
 
 
 .flexsearch--form{
-    display: flex;
-    justify-content: center;
-    
+  display: flex;
+  justify-content: center;
+  
 }
 .flexsearch--input, .flexsearch--submit{
-    background-color: #FFFDD0; 
-    border: none;
-    background: transparent;
-    border-bottom: 1px solid rgba(67,67,67,0.3);
-    
+  background-color: #FFFDD0; 
+  border: none;
+  background: transparent;
+  border-bottom: 1px solid rgba(67,67,67,0.3);
+  
 }
- 
+
 .flexsearch--input{
-    width: 30vw;
+  width: 30vw;
 }
+
 
 
 
