--- a/views/loggin.html
+++ b/views/loggin.html
@@ -21,7 +21,7 @@ rel="stylesheet" />
 
     <div class="carrito_login"> <a href="/cart"><i class="fas fa-shopping-basket"></i></a> </div>
     <div class="user"> <a href="/loggin"> <i class="far fa-user-circle"></i> </a> </div>
-
+    <div class="registro-home"> <a href="/register"> <i class="far fa-address-card"></i> </a> </div>
     
        
 
