--- a/views/product.html
+++ b/views/product.html
@@ -77,13 +77,13 @@
                     <h1 class = "titulo">LAMPARA</h1>
                     <p class = "precio">$ 20.000</p>
                     <div class="build-credit-card">
-                        <p><i class="fas fa-hand-holding-usd"></i></p>
+                        <p><i class="far fa-credit-card"></i></p>
                         <strong class = "cuotas">6</strong>
                         <p>CUOTAS SIN INTERES</p>
                         <strong class = "precio-cuotas">$900,50</strong>
                     </div>
                     <div class = "descuento-efectivo">
-                        <p><i class="fas fa-hand-holding-usd"></i></p>
+                        <p><i class="far fa-money-bill-alt"></i></p>
                         <strong class = "porc-descuento">10 % de descuento</strong>
                         <p>pagando en efectivo</p>
                     </div>
@@ -108,7 +108,7 @@
                     <button class="button-carrito"><span>AGREGAR AL CARRITO</span></button>
                 </div>
                 <div class = "medios-envio">
-                    <p><i class="fas fa-hand-holding-usd"></i> MEDIOS DE ENVIO</p>
+                    <p><i class="fas fa-shipping-fast"></i> MEDIOS DE ENVIO</p>
                 </div>
                 <div class = "codigo-postal-y-button">
                     <div class= "codigo-postal">
