--- a/views/product.html
+++ b/views/product.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css\style.css">
     <link rel="stylesheet" href="css\product.css">
     
-    <title>HOME&DECO</title>
+    <title>HANGAR</title>
 </head>
 
 <body>
