--- a/views/cart.html
+++ b/views/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HANGAR</title>
     <link rel="stylesheet" href="css\style.css">
     <link rel="stylesheet" href="css/cart.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
@@ -17,7 +17,7 @@
             <p>3 y 6 cuotas sin interes - 10% de descuento con transferencia</p>
         </div>
         <div class="logo-img">
-            <div class="logo"> <img id="img-principal" width="100%" src="./imagenes/logo-header.jpg" alt="HOME&DECO">
+            <div class="logo"> <a href="/"><img id="img-principal" width="100%" src="./imagenes/logo-header.jpg" alt="HOME&DECO"></a>
             </div>
         </div>
 
