--- a/views/loggin.html
+++ b/views/loggin.html
@@ -7,7 +7,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 rel="stylesheet" />
     <link rel="stylesheet" href="css\styleloggin.css">
-        <title>Formulario Login</title>
+        <title>HANGAR</title>
 </head>
 <header class="head">
 
