--- a/views/register.html
+++ b/views/register.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css\register.css">
-    <title>HOME&DECO</title>
+    <title>HANGAR</title>
 </head>
 
 <body>
