modificacion tabla cart

--- a/views/cart.html
+++ b/views/cart.html
@@ -56,6 +56,7 @@
 
     </header>
     <section>
+        <div style="max-width: 100vw; overflow: auto">  
         <table id="tabla">
             <tr id="tablacabecera">
                 <th>
@@ -94,6 +95,7 @@
                 </th>
             </tbody>
         </table>
+    </div>
         <div id="buttons-container">
             <button>
                 Codigo de cupon
